--- a/style.css
+++ b/style.css
@@ -89,42 +89,89 @@ body {
 
 .img-container {
     padding: 20px;
-    border: 1px solid orange;
     width: 250px;
 }
 
 .user-container {
-    border: 1px solid orange;
     width: 100%;
 }
 
 /* ------------------------------------------ */
 
 .account-name {
-    padding: 20px;
-    border: 1px solid orange;
     height: 40%;
+    display: flex;
 }
 
 .account-data {
-    padding: 20px;
-    border: 1px solid orange;
     height: 30%;
 }
 
 .account-links {
-    border: 1px solid orange;
     height: 30%;
     display: flex;
+    width: 100%;
+}
+
+/* -------- Account name ------------------ */
+.info-container {
+    width: 100%;
+}
+
+.joined-container {
+    width: 100%;
+}
+
+.username {
+    color: #fff;
+    letter-spacing: 1px;
+    height: 25%;
+}
+
+.tag {
+    letter-spacing: 1px;
+}
+
+.bio {
+    color: grey;
+    padding: 30px 0px;
+    letter-spacing: 1px;
+}
+
+.joined-date {
+    color: grey;
+    text-align: end;
+    letter-spacing: 1px;
 }
 
 /* -------- Account data ------------------ */
+
+.data-container {
+    padding: 30px 90px 30px 30px;
+    height: 100%;
+    background-color: var(--primary);
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.data-input {}
+
+.data-headers {
+    color: grey;
+}
+
+.data-numbers {
+    color: #fff;
+    font-size: 20px;
+}
 
 
 /* -------- Account links ------------------ */
 
 .links {
-    border: 1px solid purple;
     width: 100%;
 }
 
@@ -136,8 +183,6 @@ body {
     align-items: center;
     gap: 20px;
 }
-
-/* ----------------------------------------- */
 
 .link-icon {}
 
