--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     --primary: #131d2f;
     --secondary: #1f2948;
     --button: #0078ff;
+    --text-color: #fff;
 }
 
 * {
@@ -16,7 +17,7 @@ body {
 
 .main-container {
     padding: 20px;
-    max-width: 750px;
+    max-width: 850px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -27,8 +28,25 @@ body {
 /* --------------------------------------- */
 
 .heading {
-    padding: 20px;
-    border: 1px solid orange;
+    color: var(--text-color);
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn-light-mode {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--primary);
+    border: none;
+}
+
+.btn-text {
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 12px;
+    padding-right: 20px;
+    color: var(--text-color);
 }
 
 .search-bar {
@@ -42,7 +60,7 @@ body {
 }
 
 .user-info {
-    padding: 20px;
+    padding: 40px;
     background-color: var(--secondary);
     border-radius: 8px;
     height: 420px;
@@ -63,7 +81,7 @@ body {
     border: none;
     background-color: var(--secondary);
     padding: 0px 30px;
-    color: #fff;
+    color: var(--text-color);
     font-size: 18px;
 }
 
@@ -72,7 +90,7 @@ body {
     border: none;
     border-radius: 10px;
     background-color: var(--button);
-    color: #fff;
+    color: var(--text-color);
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -88,8 +106,12 @@ body {
 /* -------------- User info ------------------ */
 
 .img-container {
-    padding: 20px;
     width: 250px;
+}
+
+.avatar {
+    border-radius: 50%;
+    width: 150px;
 }
 
 .user-container {
@@ -105,6 +127,7 @@ body {
 
 .account-data {
     height: 30%;
+    line-height: 25px;
 }
 
 .account-links {
@@ -123,13 +146,15 @@ body {
 }
 
 .username {
-    color: #fff;
+    color: var(--text-color);
     letter-spacing: 1px;
     height: 25%;
 }
 
 .tag {
     letter-spacing: 1px;
+    text-decoration: none;
+    color: var(--button);
 }
 
 .bio {
@@ -147,8 +172,7 @@ body {
 /* -------- Account data ------------------ */
 
 .data-container {
-    padding: 30px 90px 30px 30px;
-    height: 100%;
+    padding: 15px 120px 15px 40px;
     background-color: var(--primary);
     border-radius: 10px;
     display: flex;
@@ -164,7 +188,7 @@ body {
 }
 
 .data-numbers {
-    color: #fff;
+    color: var(--text-color);
     font-size: 20px;
 }
 
@@ -187,5 +211,5 @@ body {
 .link-icon {}
 
 .link-text {
-    color: #fff;
+    color: var(--text-color);
 }
